updating grep in travis.yml to find all files identified as bash scripts

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,4 @@
 #  - shellcheck --version
 
 script:
-  - shellcheck $(grep -rIzl '^#![[:blank:]]*/bin/sh' ./ | grep .git -v | cat)
-  - shellcheck $(grep -rIzl '^#![[:blank:]]*/bin/bash' ./ | cat)
+  - shellcheck $(grep -rl '"^#!/bin/sh\|^#!/bin/bash\|^#!/usr/bin/env bash' ./ | grep -v ".git\|travis.yml" | cat)
