--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@
 #  - shellcheck --version
 
 script:
-  - shellcheck $(grep -rl '"^#!/bin/sh\|^#!/bin/bash\|^#!/usr/bin/env bash' ./ | grep -v ".git\|travis.yml" | cat)
+  - shellcheck $(grep -rl '"^#!/bin/sh\|^#!/bin/bash\|^#!/usr/bin/env bash' ./ | grep -v ".git\|travis.yml")
